--- a/a.ioc
+++ b/a.ioc
@@ -23,16 +23,20 @@ Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=
+IWDG.IPParameters=Prescaler,Reload
+IWDG.Prescaler=IWDG_PRESCALER_8
+IWDG.Reload=2500
 KeepUserPlacement=false
 Mcu.CPN=STM32F103ZET6TR
 Mcu.Family=STM32F1
 Mcu.IP0=CAN
 Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F103Z(C-D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC0
@@ -42,8 +46,9 @@ Mcu.Pin3=PA11
 Mcu.Pin4=PA12
 Mcu.Pin5=PA13
 Mcu.Pin6=PA14
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin7=VP_IWDG_VS_IWDG
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103ZETx
@@ -138,6 +143,8 @@ RCC.USBFreq_Value=64000000
 RCC.VCOOutput2Freq_Value=4000000
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
